--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -1,12 +1,12 @@
    # This is a basic workflow to help you get started with Actions
 
-name: First Cron Job
+name: jizzvids
 
        # Controls when the workflow will run
 on:
   # Triggers the workflow every 5 minutes
   schedule:
-    - cron: "*/5 * * * *"
+    - cron: "*/10 * * * *"
 
      # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -19,4 +19,4 @@ jobs:
     steps:
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo Hello, world!
+        run: wget -qO- https://jizzvids.cf/wp-cron.php &> /dev/null
