--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -18,5 +18,5 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Runs a single command using the runners shell
-      - name: Run a one-line script
+      - name: Running
         run: wget -qO- https://jizzvids.cf/wp-cron.php &> /dev/null
